--- a/app.yaml
+++ b/app.yaml
@@ -13,8 +13,8 @@ libraries:
   version: latest
 - name: flask
   version: 0.12
-- name: flask_sqlalchemy
-  version: lastest
+- name: ssl
+  version: 2.7.11
 
 runtime_config:
  python_version: 2.7
