--- a/app.yaml
+++ b/app.yaml
@@ -20,4 +20,4 @@ runtime_config:
  python_version: 2.7
 
 beta_settings:
-  cloud_sql_instances: "s3488797-cc2019:australia-southeast1:sql-storage"
+  cloud_sql_instances: s3488797-cc2019:australia-southeast1:sql-storage
