Begun implementing cron schedule or regularly updating the database
Requires fixing the structure of the listens table first

--- a/app.yaml
+++ b/app.yaml
@@ -3,6 +3,9 @@ entrypoint: gunicorn -b :$PORT main:app
 api_version: 1
 threadsafe: distributed
 handlers:
+- url: /task*
+  script: tasks.app
+  login: admin
 - url: /.*
   script: app.app
 
