Successfully implemented database writing of listens and tracks as well as scheduling update requests every half hour

--- a/app.yaml
+++ b/app.yaml
@@ -3,9 +3,8 @@ entrypoint: gunicorn -b :$PORT main:app
 api_version: 1
 threadsafe: distributed
 handlers:
-- url: /task*
+- url: /fetch_listens
   script: tasks.app
-  login: admin
 - url: /.*
   script: app.app
 
