--- a/cron.yaml
+++ b/cron.yaml
@@ -1,5 +1,5 @@
 cron:
 - description: "Request to update listens for users"
-  url: /task/fetch_listens
+  url: /fetch_listens
   target: beta
-  schedule: every 1 hours
+  schedule: every 30 mins
